syntax = "proto3";

package kvstore;

// KVStore service provides key-value storage operations
service KVStore {
  // Get retrieves a value by key
  rpc Get(GetRequest) returns (GetResponse);

  // Set stores a key-value pair
  rpc Set(SetRequest) returns (SetResponse);

  // Delete removes a key-value pair
  rpc Delete(DeleteRequest) returns (DeleteResponse);

  // HealthCheck verifies the service is operational
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  // List returns all keys with a given prefix (streaming)
  rpc List(ListRequest) returns (stream ListResponse);
}

message GetRequest {
  string key = 1;
  string token = 2;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
  string token = 3;
  optional int64 ttl_seconds = 4; // Optional TTL in seconds
}

message SetResponse {
  bool success = 1;
  string message = 2;
}

message DeleteRequest {
  string key = 1;
  string token = 2;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  bool healthy = 1;
  string message = 2;
}

message ListRequest {
  string prefix = 1;
  string token = 2;
}

message ListResponse {
  string key = 1;
}
